--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="nav-link btn btn-link" id="aboutBtn">About</button>
           </li>
           <li class="nav-item">
-            <button class="nav-link btn btn-link" id="contactBtn">Contact</button>
+            <button class="nav-link btn btn-link" id="contactBtn">Pokémon data Example</button>
           </li>
         </ul>
       </div>
@@ -30,7 +30,7 @@
 
   <div id="canvas-container">
     <video id="background-video" autoplay loop muted>
-      <source src="video/Aftermovie opening Joint Research Center Zeeland  HZ University of Applied Sciences.mp4" type="video/mp4">
+      <source src="video/Promo_JCRZ.mp4" type="video/mp4">
     </video>
 
     <div id="content" class="container">
