--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <button class="nav-link btn btn-link" id="contactBtn">Contact</button>
           </li>
+          <li class="nav-item">
+            <button class="nav-link btn btn-link" id="pokeBtn">Pokemon</button>
+          </li>
         </ul>
       </div>
     </nav>
@@ -50,6 +53,12 @@
         <p>Email: info@jrczzeeland.nl</p>
         <p>Phone: +31 123 456 789</p>
       </div>
+
+      <div id="pokeView" class="view">
+        <h1>Pokemon test</h1>
+        <p>aaaization dedicated to providing assistance and support to youth in the region of Zeeland. We offer various programs, training, and events to empower and educate young individuals.</p>
+      </div>
+
     </div>
   </div>
 
