--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>JRCZ Zeeland</title>
-  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">JRCZ Zeeland</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -33,7 +37,8 @@
 
   <div id="canvas-container">
     <video id="background-video" autoplay loop muted>
-      <source src="video/Aftermovie opening Joint Research Center Zeeland  HZ University of Applied Sciences.mp4" type="video/mp4">
+      <source src="video/Aftermovie opening Joint Research Center Zeeland  HZ University of Applied Sciences.mp4"
+        type="video/mp4">
     </video>
 
     <div id="content" class="container">
@@ -44,7 +49,9 @@
 
       <div id="aboutView" class="view">
         <h1>About JRCZ Zeeland</h1>
-        <p>The JRCZ (Jeugd Rode Kruis Zeeland) is an organization dedicated to providing assistance and support to youth in the region of Zeeland. We offer various programs, training, and events to empower and educate young individuals.</p>
+        <p>The JRCZ (Jeugd Rode Kruis Zeeland) is an organization dedicated to providing assistance and support to youth
+          in the region of Zeeland. We offer various programs, training, and events to empower and educate young
+          individuals.</p>
       </div>
 
       <div id="contactView" class="view">
@@ -56,12 +63,20 @@
 
       <div id="pokeView" class="view">
         <h1>Pokemon test</h1>
-        <p>aaaization dedicated to providing assistance and support to youth in the region of Zeeland. We offer various programs, training, and events to empower and educate young individuals.</p>
-      </div>
+        <p>aaaization dedicated to providing assistance and support to youth in the region of Zeeland. We offer various
+          programs, training, and events to empower and educate young individuals.</p>
 
+        <input id="pokemonInput" type="text" placeholder="Enter pokemon name" />
+        <div class="wrap">
+          <button id="submitBtn" class="button">Submit</button>
+        </div>
+        <div id="pokemonData"></div>
+        <script src="script.js"></script>
+      </div>
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
