--- a/td.html
+++ b/td.html
@@ -39,13 +39,10 @@
 
           // Create a camera and attach it to the canvas
           const camera = new BABYLON.FreeCamera("default camera", new BABYLON.Vector3(0, 0, -1), scene);
-          camera.moveSpeed = 0.7592094605152444
+          camera.speed = 0.1
 
           // This attaches the camera to the canvas
           camera.attachControl(canvas);
-          camera.minX = -2;
-          camera.maxX = 2;
-          
 
           // Load the scene and render it continuously
           BABYLON.SceneLoader.Append("", "scene.babylon", scene, function(scene) {
@@ -58,7 +55,7 @@
 
           // Watch for browser/canvas resize events
           window.addEventListener("resize", function () {
-                  engine.resize();
+                engine.resize();
           });
         }
 	</script>
