--- a/td.html
+++ b/td.html
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Babylon Template</title>
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         html,
@@ -27,25 +28,23 @@
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 </head>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">JRCZ Zeeland</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <button class="nav-link btn btn-link" id="homeBtn">Home</button>
-        </li>
-        <li class="nav-item">
-          <button class="nav-link btn btn-link" id="aboutBtn">About</button>
-        </li>
-        <li class="nav-item">
-          <button class="nav-link btn btn-link" id="contactBtn">Contact</button>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">JRCZ Zeeland</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/"><button class="nav-link btn btn-link" id="homeBtn">Home</button></a>
+                </li>
+                <li class="nav-item">
+                    <a href="selector.html"><button class="nav-link btn btn-link" id="3DButton">3D View</button></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </header>
 
 <body>
