--- a/selector.html
+++ b/selector.html
@@ -36,15 +36,15 @@
 
     <h1></h1>
     <a href="lab.html">
-      <img src="img/lab.png" id="labImage" alt="">Science Lab
+      <img src="img/lab.png" id="labImage" alt="">
     </a>
 
     <a href="gameRoom.html">
-      <img src="img/gameRoom.png" id="gameImage" alt="">Game Room
+      <img src="img/gameRoom.png" id="gameImage" alt="">
     </a>
 
     <a href="workStation.html">
-      <img src="img/workRoom.png" id="workImage" alt=""> Work Room
+      <img src="img/workRoom.png" id="workImage" alt="">
     </a>
   </div>
 
