Made Recommend a Button

--- a/pokemon/pokemon.html
+++ b/pokemon/pokemon.html
@@ -38,6 +38,7 @@
 
             <div class="form">
                 <button type="button" id="add-button" hidden="hidden">Add to Team</button>
+                <button type="button" id="reccomend-button" hidden="hidden">Recommend</button>
             </div>
         </div>
 
