--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="selector.html"><button class="nav-link btn btn-link" id="3DButton">3D View</button></a>
           </li>
           <li class="nav-item">
-            <button class="nav-link btn btn-link" id="pokeBtn">Pokemon</button>
+            <a href="./pokemon/pokemon.html" target="_blank"><button class="nav-link btn btn-link" id="pokeBtn">Pokemon</button></a>
           </li>
         </ul>
       </div>
@@ -35,7 +35,7 @@
   <div id="canvas-container">
     <img src="img/JRCZ Logo.png" id="logo" alt="">
     <video id="background-video" autoplay loop muted>
-      <source src="video/Aftermovie opening Joint Research Center Zeeland  HZ University of Applied Sciences.mp4"
+      <source src="video/Promo_JCRZ.mp4"
         type="video/mp4">
     </video>
 
