--- a/selector.html
+++ b/selector.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a href="td.html"><button class="nav-link btn btn-link" id="3DButton">3D View</button></a>
           </li>
+          <li class="nav-item">
+            <a href="./pokemon/pokemon.html" target="_blank"><button class="nav-link btn btn-link" id="pokeBtn">Pokemon</button></a>
+          </li>
         </ul>
       </div>
     </nav>
