--- a/lab.html
+++ b/lab.html
@@ -42,6 +42,9 @@
                 <li class="nav-item">
                     <a href="selector.html"><button class="nav-link btn btn-link" id="3DButton">3D View</button></a>
                 </li>
+                <li class="nav-item">
+                    <a href="./pokemon/pokemon.html" target="_blank"><button class="nav-link btn btn-link" id="pokeBtn">Pokemon</button></a>
+                </li>
             </ul>
         </div>
     </nav>
